@@ -1,5 +1,11 @@
 2006-01-20  Carl Worth  <cworth@cworth.org>
 
+	* test/ft-font-create-for-ft-face.c: (draw): Fix test to use
+	fontconfig properly so that the test no longer fails. Fixes bug
+	#4674. (Thnks to sunmoon1997 for the fix).
+
+2006-01-20  Carl Worth  <cworth@cworth.org>
+
 	* src/cairo-scaled-font.c: (cairo_scaled_font_create): Check
 	font_face->status and return a nil scaled font if it is in an
 	error state. (Thanks to Christian Biesinger and sunmoon1997 who
